# Injector-Base

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/uk/lgl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Client/: Client.cpp
app/src/main/cpp/Client/Esp/: Bools.h  ESP.h  Log.h  Rect.hpp  StructsCommon.h  Vector3.hpp
app/src/main/cpp/Client/Includes/: Logger.h
app/src/main/cpp/Inject/: inject_main.cpp
app/src/main/cpp/Server/: Server.cpp
app/src/main/cpp/Server/Unity/: Color.hpp  Quaternion.hpp  Unity.h
app/src/main/cpp/Socket/: Const.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
app/src/main/java/uk/lgl/: MainActivity.java  Musk.java
app/src/main/java/uk/lgl/modmenu/: ESPView.java  FloatingModMenuService.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uk/lgl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
